--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <ul>
-                        <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.yourwebsite.com</span></li>
+                        <!-- <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.yourwebsite.com</span></li> -->
                         <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+62 851 7301 2307</span></li>
                         <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Surabaya, Indonesia</span></li>
                     </ul>
