--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             </a>
           </div>
 
-          <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
+          <!-- <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
             <a href="portfolio-single-5.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img"
               data-id="3">
               <div class="overlay">
@@ -280,20 +280,94 @@
               </div>
               <img src="images/design.png" class="lazyload  img-fluid" alt="Images" />
             </a>
-          </div>
+          </div> -->
 
 
           <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-            <a href="portfolio-single-6.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img"
+            <a href="nitrak.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img"
               data-id="1">
               <div class="overlay">
                 <span class="wrap-icon icon-link2"></span>
                 <div class="portfolio-item-content">
                   <!-- <h3>Black & White Cubic</h3> -->
+                  <h3>Nitrak</h3>
+                  <p>Full Stack Developer Website</p>
+                </div>
+              </div>
+              <img src="images/nitrak3.png" class="lazyload  img-fluid" alt="Images" />
+            </a>
+          </div>
+
+          <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
+            <a href="wablaz.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img"
+              data-id="1">
+              <div class="overlay">
+                <span class="wrap-icon icon-link2"></span>
+                <div class="portfolio-item-content">
+                  <!-- <h3>Black & White Cubic</h3> -->
+                  <h3>Wablazz</h3>
+                  <p>Full Stack Developer Website</p>
+                </div>
+              </div>
+              <img src="images/wablaz.png" class="lazyload  img-fluid" alt="Images" />
+            </a>
+          </div>
+
+          <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
+            <a href="ourcity.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img"
+              data-id="1">
+              <div class="overlay">
+                <span class="wrap-icon icon-link2"></span>
+                <div class="portfolio-item-content">
+                  <!-- <h3>Black & White Cubic</h3> -->
+                  <h3>Ourcity</h3>
+                  <p>Full Stack Developer Website</p>
+                </div>
+              </div>
+              <img src="images/ourcity.png" class="lazyload  img-fluid" alt="Images" />
+            </a>
+          </div>
+
+          <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
+            <a href="dsi.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img"
+              data-id="1">
+              <div class="overlay">
+                <span class="wrap-icon icon-link2"></span>
+                <div class="portfolio-item-content">
+                  <!-- <h3>Black & White Cubic</h3> -->
+                  <h3>Unair Merdeka</h3>
+                  <p>Mobile Developer</p>
+                </div>
+              </div>
+              <img src="images/dsi (2).png" class="lazyload  img-fluid" alt="Images" />
+            </a>
+          </div>
+          <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
+            <a href="dsi.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img"
+              data-id="1">
+              <div class="overlay">
+                <span class="wrap-icon icon-link2"></span>
+                <div class="portfolio-item-content">
+                  <!-- <h3>Black & White Cubic</h3> -->
+                  <h3>Python</h3>
                   <p>Sertifikat</p>
                 </div>
               </div>
-              <img src="images/sertif.jpg" class="lazyload  img-fluid" alt="Images" />
+              <img src="images/python.jpg" class="lazyload  img-fluid" alt="Images" />
+            </a>
+          </div>
+          <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
+            <a href="dsi.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img"
+              data-id="1">
+              <div class="overlay">
+                <span class="wrap-icon icon-link2"></span>
+                <div class="portfolio-item-content">
+                  <!-- <h3>Black & White Cubic</h3> -->
+                  <h3>GOlang</h3>
+                  <p>Sertifikat</p>
+                </div>
+              </div>
+              <img src="images/golang.jpg" class="lazyload  img-fluid" alt="Images" />
             </a>
           </div>
 
@@ -626,7 +700,6 @@
 
 
   <script src="js/custom.js"></script>
-
 </body>
 
 </html>
