--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <h3>Core Competencies</h3>
                     <ul>
                         <li><i class="fa-solid fa-laptop-code"></i> Programming (Java, Python, JS, PHP, Golang, Dart)</li>
-                        <li><i class="fa-brands fa-html5"></i> Web Dev (HTML, CSS, React, Node.js)</li>
+                        <li><i class="fa-brands fa-html5"></i> Web Dev (HTML, CSS, React, Node.js, Laravel, Flask)</li>
                          <li><i class="fa-brands fa-android"></i> Mobile Dev (Flutter)</li>
                         <li><i class="fa-solid fa-database"></i> Databases (SQL, MongoDB)</li>
                         <li><i class="fa-solid fa-brain"></i> AI/ML Basics (Python Libraries)</li>
@@ -93,7 +93,7 @@
 
                     <!-- Project 1 (Example) - REPLACE -->
                     <div class="project-item animate-on-scroll fade-in" data-item-type="project" data-id="proj1">
-                        <img src="images/project1-thumb.png" alt="Project 1 Screenshot"> <!-- REPLACE -->
+                        <img src="images/wablaz1.png" alt="Project 1 Screenshot"> <!-- REPLACE -->
                         <div class="project-overlay">
                             <h4>E-Commerce Website</h4> <!-- REPLACE -->
                             <div class="project-tags">
@@ -104,7 +104,7 @@
 
                     <!-- Project 2 (Example) - REPLACE -->
                     <div class="project-item animate-on-scroll fade-in" data-item-type="project" data-id="proj2">
-                        <img src="images/project2-thumb.png" alt="Project 2 Screenshot"> <!-- REPLACE -->
+                        <img src="images/ourcity.png" alt="Project 2 Screenshot"> <!-- REPLACE -->
                          <div class="project-overlay">
                             <h4>Task Management App</h4> <!-- REPLACE -->
                             <div class="project-tags">
@@ -115,7 +115,7 @@
 
                     <!-- Project 3 (Example) - REPLACE -->
                     <div class="project-item animate-on-scroll fade-in" data-item-type="project" data-id="proj3">
-                        <img src="images/project3-thumb.png" alt="Project 3 Screenshot"> <!-- REPLACE -->
+                        <img src="images/nitrak3.png" alt="Project 3 Screenshot"> <!-- REPLACE -->
                          <div class="project-overlay">
                             <h4>Data Visualization Dashboard</h4> <!-- REPLACE -->
                              <div class="project-tags">
@@ -123,6 +123,27 @@
                              </div>
                         </div>
                     </div>
+
+                    <div class="project-item animate-on-scroll fade-in" data-item-type="project" data-id="proj3">
+                        <img src="images/agt1.png" alt="Project 3 Screenshot"> <!-- REPLACE -->
+                         <div class="project-overlay">
+                            <h4>Data Visualization Dashboard</h4> <!-- REPLACE -->
+                             <div class="project-tags">
+                                 <span class="tag">Python</span> <span class="tag">Flask</span> <span class="tag">Plotly</span> <!-- REPLACE -->
+                             </div>
+                        </div>
+                    </div>
+
+                    <div class="project-item animate-on-scroll fade-in" data-item-type="project" data-id="proj3">
+                        <img src="images/11.png" alt="Project 3 Screenshot"> <!-- REPLACE -->
+                         <div class="project-overlay">
+                            <h4>Data Visualization Dashboard</h4> <!-- REPLACE -->
+                             <div class="project-tags">
+                                 <span class="tag">Python</span> <span class="tag">Flask</span> <span class="tag">Plotly</span> <!-- REPLACE -->
+                             </div>
+                        </div>
+                    </div>
+                    
 
                     <!-- Add more project items here if needed -->
 
