--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="hero-socials">
                         <a href="https://www.linkedin.com/in/andyka-salom/" target="_blank" aria-label="LinkedIn" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/andyka-salom" target="_blank" aria-label="GitHub" title="GitHub"><i class="fab fa-github"></i></a>
-                        <a href="#" target="_blank" aria-label="Instagram" title="Instagram"><i class="fab fa-instagram"></i></a> <!-- REPLACE # -->
+                        <a href="https://www.instagram.com/nextcodee" target="_blank" aria-label="Instagram" title="Instagram"><i class="fab fa-instagram"></i></a> <!-- REPLACE # -->
                     </div>
                 </div>
                  <div class="hero-image-container animate-on-scroll fade-in delay-1">
@@ -143,6 +143,33 @@
                              </div>
                         </div>
                     </div>
+                    <div class="project-item animate-on-scroll fade-in" data-item-type="project" data-id="proj3">
+                        <img src="images/dsi (2).png" alt="Project 3 Screenshot"> <!-- REPLACE -->
+                         <div class="project-overlay">
+                            <h4>Data Visualization Dashboard</h4> <!-- REPLACE -->
+                             <div class="project-tags">
+                                 <span class="tag">Python</span> <span class="tag">Flask</span> <span class="tag">Plotly</span> <!-- REPLACE -->
+                             </div>
+                        </div>
+                    </div>
+                    <div class="project-item animate-on-scroll fade-in" data-item-type="project" data-id="proj3">
+                        <img src="images/14.png" alt="Project 3 Screenshot"> <!-- REPLACE -->
+                         <div class="project-overlay">
+                            <h4>Data Visualization Dashboard</h4> <!-- REPLACE -->
+                             <div class="project-tags">
+                                 <span class="tag">Python</span> <span class="tag">Flask</span> <span class="tag">Plotly</span> <!-- REPLACE -->
+                             </div>
+                        </div>
+                    </div>
+                    <div class="project-item animate-on-scroll fade-in" data-item-type="project" data-id="proj3">
+                        <img src="images/taskly.png" alt="Project 3 Screenshot"> <!-- REPLACE -->
+                         <div class="project-overlay">
+                            <h4>Data Visualization Dashboard</h4> <!-- REPLACE -->
+                             <div class="project-tags">
+                                 <span class="tag">Python</span> <span class="tag">Flask</span> <span class="tag">Plotly</span> <!-- REPLACE -->
+                             </div>
+                        </div>
+                    </div>
                     
 
                     <!-- Add more project items here if needed -->
@@ -160,9 +187,9 @@
 
                     <!-- Certification 1 (Example) - REPLACE -->
                     <div class="certification-item animate-on-scroll fade-in" data-item-type="certification" data-id="cert1">
-                        <img src="images/cert-aws-thumb.png" alt="AWS Certification Thumbnail"> <!-- REPLACE with thumbnail/logo -->
+                        <img src="images/sertif.jpg" alt="AWS Certification Thumbnail"> <!-- REPLACE with thumbnail/logo -->
                         <div class="certification-overlay">
-                            <h4>AWS Cloud Practitioner</h4> <!-- REPLACE -->
+                            <h4>IT PERBANKAN</h4> <!-- REPLACE -->
                         </div>
                     </div>
 
@@ -202,7 +229,7 @@
                         <div class="contact-social-links">
                              <a href="https://www.linkedin.com/in/andyka-salom/" target="_blank" aria-label="LinkedIn" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
                             <a href="https://github.com/andyka-salom" target="_blank" aria-label="GitHub" title="GitHub"><i class="fab fa-github"></i></a>
-                            <a href="#" target="_blank" aria-label="Instagram" title="Instagram"><i class="fab fa-instagram"></i></a> <!-- REPLACE # -->
+                            <a href="https://www.instagram.com/nextcodee" target="_blank" aria-label="Instagram" title="Instagram"><i class="fab fa-instagram"></i></a> <!-- REPLACE # -->
                         </div>
                     </div>
                     <div class="contact-form-container animate-on-scroll slide-up delay-1">
