--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andyka Salom - Portfolio | Informatics Engineering</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="images/logo.png">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -95,9 +96,9 @@
                     <div class="project-item animate-on-scroll fade-in" data-item-type="project" data-id="proj1">
                         <img src="images/wablaz1.png" alt="Project 1 Screenshot"> <!-- REPLACE -->
                         <div class="project-overlay">
-                            <h4>E-Commerce Website</h4> <!-- REPLACE -->
+                            <h4>Notifikasi Whatsapp Website</h4> <!-- REPLACE -->
                             <div class="project-tags">
-                                <span class="tag">React</span> <span class="tag">Node.js</span> <span class="tag">MongoDB</span> <!-- REPLACE -->
+                                <span class="tag">Larevel</span> <span class="tag">css</span> <span class="tag">mysql</span> <!-- REPLACE -->
                             </div>
                         </div>
                     </div>
@@ -117,9 +118,9 @@
                     <div class="project-item animate-on-scroll fade-in" data-item-type="project" data-id="proj3">
                         <img src="images/nitrak3.png" alt="Project 3 Screenshot"> <!-- REPLACE -->
                          <div class="project-overlay">
-                            <h4>Data Visualization Dashboard</h4> <!-- REPLACE -->
+                            <h4>Monitoring Tender Website</h4> <!-- REPLACE -->
                              <div class="project-tags">
-                                 <span class="tag">Python</span> <span class="tag">Flask</span> <span class="tag">Plotly</span> <!-- REPLACE -->
+                                <span class="tag">Laravel</span> <span class="tag">Javascript</span> <span class="tag">mysql</span>
                              </div>
                         </div>
                     </div>
@@ -195,17 +196,17 @@
 
                     <!-- Certification 2 (Example) - REPLACE -->
                      <div class="certification-item animate-on-scroll fade-in" data-item-type="certification" data-id="cert2">
-                        <img src="images/cert-python-thumb.png" alt="Python Certification Thumbnail"> <!-- REPLACE with thumbnail/logo -->
+                        <img src="images/python.jpg" alt="Python Certification Thumbnail"> <!-- REPLACE with thumbnail/logo -->
                         <div class="certification-overlay">
-                            <h4>Python for Data Science</h4> <!-- REPLACE -->
+                            <h4>Backend-Python</h4> <!-- REPLACE -->
                         </div>
                     </div>
 
                     <!-- Certification 3 (Example) - REPLACE -->
                      <div class="certification-item animate-on-scroll fade-in" data-item-type="certification" data-id="cert3">
-                        <img src="images/cert-web-thumb.png" alt="Web Development Thumbnail"> <!-- REPLACE with thumbnail/logo -->
+                        <img src="images/golang.png" alt="Web Development Thumbnail"> <!-- REPLACE with thumbnail/logo -->
                         <div class="certification-overlay">
-                            <h4>Dicoding: Web Dev Expert</h4> <!-- REPLACE -->
+                            <h4>Backend-Golang</h4> <!-- REPLACE -->
                         </div>
                     </div>
 
